# naradev-website

./: Cargo.toml  index.html  tailwind.config.js
.github/workflows/: deploy.yml
assets/data/: projects.json  socials.json
src/: main.rs  tailwind.css
src/components/: about_me.rs  card.rs  featured_projects.rs  footer.rs  header.rs  hello.rs  home.rs  mod.rs  not_found.rs  project_card.rs  social_image_link.rs  wip_banner.rs
src/content/: about_me.html
src/domain/: mod.rs  project.rs  social.rs
src/hooks/: mod.rs  use_data_asset.rs
