[package]
name = "naradev-website"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
console_error_panic_hook = "0.1.7"
gloo-net = "0.6.0"
serde = { version = "1.0.210", features = ["derive"] }
wasm-bindgen-futures = "0.4.45"
web-sys = "0.3.72"
yew = { git = "https://github.com/yewstack/yew", version = "0.21.0", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew", version = "0.18.0" }
